--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esbuild index.ts --outfile=index.js",
+    "pm2": "esbuild index.ts --outfile=index.js && pm2 start index.js",
+    "dev": "npx tsx index.ts"
   },
+  "type": "module",
   "author": "3swordman",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
@@ -31,6 +34,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.6.3",
     "@types/uuid": "^8.3.4",
+    "esbuild": "^0.15.13",
     "pino-pretty": "^8.1.0"
   }
 }
