--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "mongodb": "^4.8.1",
     "mysql": "^2.18.1",
     "pino": "^8.3.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
+    "typeorm": "^0.3.17",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-pino-logger": "^4.0.3",
