--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.4",
     "express": "^4.18.1",
-    "express-pino-logger": "^7.0.0",
     "express-rate-limit": "^6.5.1",
     "express-useragent": "^1.0.15",
-    "mongodb": "^4.8.1",
     "mysql": "^2.18.1",
     "pino": "^8.3.1",
+    "pino-http": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17",
@@ -29,7 +28,6 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/express-pino-logger": "^4.0.3",
     "@types/express-useragent": "^1.0.2",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.6.3",
