--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "experimentalDecorators": true,
         "strictPropertyInitialization": false,
         "target": "ESNext",
-        "moduleResolution": "NodeNext"
+        "moduleResolution": "NodeNext",
+        "skipLibCheck": true
     },
     "include": ["."],
     "exclude": ["node_modules"]
